# pg-dev-container

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
clang-tests/: Makefile  PostgresTypes.h  a.out  analysis_age_results.out  analysis_backend_results.out  analysis_citus.out  analysis_contrib_results.out  analysis_current_directory_results.out  analysis_postgresql_results.out  analysis_src_results.out  analysis_timescaledb_results.out  baseChecker.sh  installAndRunCheck.sh  list  list.c  otherfile.c  otherfile.h  runCheck.sh  test.c  test.h  test.plist  tmp  tmpp  trycatch.c  withoutPGRun.sh
clang-tests/Archive/testchecker/: CMakeLists.txt  MyChecker.cpp  build.sh  prerequs  run.sh  test.c  test.cpp  tmp
clang-tests/PGtmp/: analysis_src_results.out
clang-tests/coccinelle/: ecpg.cocci  redef.iso  run.sh  stuart.cocci  test.c
clang-tests/oldanalysis/: analysis_src_results.out  analysis_src_results_OLD.out  analysis_src_results_withoutext.out
coccinelle/: Makefile  README.md  TARGET  funny  interesting.txt  interesting_cases  notes.tex  pfreerep.out  repalloc_reduced.out  showFailures.sh  tmp  watchLatestLog.sh
coccinelle/notes/: categories  excludeReasons.tex  interesting.txt  pfree_reduced.out
coccinelle/results/: 1.out  2.out  all.out  allDuplicate.out  char.out  char_reduced.out  dependentfunconly.txt  dulicates.out  duplicatesRealloc.out  free_reduced.out  freedoubled.out  (+37 more)
simpleDivideZeroTest/: CMakeLists.txt  clang-script.sh  divide-zero-test  run.sh  runInt.sh  simpleDivideZeroTest.c  unassigned-test
simpleDivideZeroTest/src/: intTest.c
(+393 files in other folders)
